--- a/sass/partials/styleguide/_adblocks.scss
+++ b/sass/partials/styleguide/_adblocks.scss
@@ -92,8 +92,7 @@
   display: block;
   float: right;
   background-color: white;
-  padding-top: 100px;
-  height: 203px;
+  height: 103px;
   overflow: hidden;
   }
 }
